# JaxGCRL

./: .gitignore  404.html  README.md  config.py  dockerfile  env_utils.py  environment.yml  humanoid_mj3.py  index.html  lp_contrastive.py  main.py  mkdocs.yml  pyproject.toml  reacher.py  render.py  req_small.txt  requirements.txt  run.py  run_reacher.py  sitemap.xml  test.py  train.py  training.py  training_ppo.py  training_sac.py  training_td3.py  utils.py  visualize.ipynb
agents/: __init__.py
agents/crl/: crl.py  losses.py  networks.py
agents/ppo/: ppo.py
agents/sac/: sac.py
agents/td3/: losses.py  td3.py
clean_JaxGCRL/: README.md  train_crl_jax_brax.py  train_crl_marl.py
clean_JaxGCRL/envs/: ant.py  ant_maze.py
contrastive/: agents.py  builder.py  config.py  distributed_layout.py  learning.py  networks.py  utils.py
crl/: losses.py  networks.py  train.py
crl_new/: evaluator.py  losses.py  networks.py  train.py  utils.py
docs/: environments.md  index.md  install.md  methods.md  usage.md
environments/: index.html
envs/: ant.py  ant_ball.py  ant_ball_maze.py  ant_maze.py  ant_push.py  arm_binpick.py  arm_envs.py  arm_grasp.py  arm_pickplace_easy.py  arm_pickplace_hard.py  arm_reach.py  common.py  debug_env.py  half_cheetah.py  hard_ant.py  humanoid.py  humanoid_maze.py  humanoid_mj3.py  mpe_simple.py  mpe_tag.py  pusher.py  pusher2.py  reacher.py  simple_maze.py  wrappers.py
envs/assets/: ant.xml  ant_ball.xml  ant_maze.xml  ant_push.xml  half_cheetah.xml  hard_ant.xml  humanoid.xml  panda_binpick_easy.xml  panda_binpick_hard.xml  panda_binpick_mjx.xml  panda_binpick_positional.xml  panda_grasp.xml  panda_grasp_mjx.xml  panda_grasp_positional.xml  panda_multi_pickplace_EEF.xml  panda_pickplace_easy_mjx.xml  panda_pickplace_easy_positional.xml  panda_pickplace_hard_mjx.xml  panda_pickplace_hard_positional.xml  panda_push_easy.xml  panda_push_hard.xml  panda_reach.xml  panda_reach_mjx.xml  panda_reach_positional.xml  (+1 more)
install/: index.html
jaxgcrl/: __init__.py
methods/: index.html
notebooks/: copy_runs.ipynb  plot_arch_all.ipynb  plot_contr_fn.ipynb  plot_contr_fun_all.ipynb  plot_creation.ipynb  plot_energy_fun_all.ipynb  plot_logsumexp.ipynb  plot_logsumexp_all.ipynb  plots_arch.ipynb  plots_ln.ipynb  utils.py  visualize.ipynb  visualize.py
old_contrastive/: lp_contrastive.py
scripts/: launch_sweep.sh  sweep.yml  train.sh
search/: search_index.json
src/: crl.py  distribution.py  evaluator.py  losses.py  networks.py  ppo.py  replay_buffer.py  train.py
tests/: test_envs.py
usage/: index.html
utils/: __init__.py  config.py  env.py  evaluator.py  replay_buffer.py  utils.py
(+82 files in other folders)
