[project]
name = "jaxgcrl"
version = "0.2.5"
description = "Blazingly fast goal-conditioned environments based on MJX and BRAX."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "jax==0.4.25",
    "flax>=0.8.3",
    "brax>=0.12.1",
    "mujoco==3.2.7",
    "mujoco-mjx==3.2.7",
    "scipy>=1.12.0",
    "matplotlib==3.8.4",
    "tyro>=0.9.16",
    "wandb",
    "wandb_osh",
]

[project.scripts]
jaxgcrl = "run:cli"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
py-modules = ["run"]

[tool.setuptools.package-data]
"jaxgcrl.envs" = ["**/assets/*"]

