[project]
name = "jaxgcrl"
version = "0.2.8"
description = "Blazingly fast goal-conditioned environments based on MJX and BRAX."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "pip>=25.0.1",
  "jax==0.4.25",
  "jaxlib==0.4.25+cuda12.cudnn89; platform_system == 'Linux'",
  "nvidia-cudnn-cu11>=8.9,<9.0; platform_system == 'Linux'",
  "nvidia-cuda-cupti-cu12>=12.4; platform_system == 'Linux'",
  "nvidia-cusolver-cu12>=11.7.3.90; platform_system == 'Linux'",
  "jaxlib==0.4.25; platform_system != 'Linux'",
  "flax>=0.8.3",
  "brax==0.12.1",
  "matplotlib==3.8.4",
  "mujoco==3.2.7",
  "mujoco-mjx==3.2.7",
  "numpy<2",
  "scipy>=1.12",
  "tyro>=0.9.16",
  "wandb",
  "wandb-osh",
]

[project.scripts]
jaxgcrl = "run:cli"

[project.urls]
homepage = "https://michalbortkiewicz.github.io/JaxGCRL/"

[tool.uv]
find-links = [ "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html" ]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[build-system]
requires = [ "setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
py-modules = [ "run" ]

[tool.setuptools.package-data]
"jaxgcrl.envs" = ["**/assets/*"]

[tool.ruff]
line-length = 110
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

